--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,71 @@
-/home/radwan/.tmux.conf
+# Add color to tmux terminal
+set -g default-terminal "screen-256color"
+
+#-----------------------------
+# List of Plugins
+# https://github.com/tmux-plugins/tpm
+#-------------------------------
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Vim + tmux pane navigation see: 
+# https://github.com/christoomey/vim-tmux-navigator
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# To keep tmux session persistant after device shuts down.
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+ run -b '~/.tmux/plugins/tpm/tpm'
+
+# Put tmux in vi mode by default
+set-window-option -g mode-keys vi
+# Make tmux copy mode similar to vim
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+# Tmux pane creating remapping
+bind | split-window -h -c "#{pane_current_path}"
+bind _ split-window -v -c "#{pane_current_path}"
+
+# This tmux statusbar config was created by tmuxline.vim
+# on Sat, 16 May 2020
+set -g status-justify "left"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=colour145,bg=colour236"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=colour114"
+set -g status-style "none,bg=colour236"
+set -g message-style "fg=colour145,bg=colour236"
+set -g pane-border-style "fg=colour236"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-style "none"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=colour114,bg=colour236"
+set -g status-left "#[fg=colour235,bg=colour114] #S #[fg=colour114,bg=colour236,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour236,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour145,bg=colour236] %Y-%m-%d  %H:%M #[fg=colour114,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour114] #h "
+setw -g window-status-format "#[fg=colour114,bg=colour236] #I #[fg=colour114,bg=colour236] #W "
+setw -g window-status-current-format "#[fg=colour236,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour145,bg=colour236] #I #[fg=colour145,bg=colour236] #W #[fg=colour236,bg=colour236,nobold,nounderscore,noitalics]"
+
+# allow scrolling in tmux
+setw -g mouse on
+
+# Resizing tmux panes
+bind-key -r + resize-pane -U 10
+bind-key -r - resize-pane -D 10
+bind-key -r < resize-pane -L 10
+bind-key -r > resize-pane -R 10
+
+
+ ##Smart pane resizing with awareness of Vim splits.
+ ##See: https://github.com/RyanMillerC/better-vim-tmux-resizer
+#is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    #| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+ ##Edit values if you use custom resize_count variables
+#bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "resize-pane -L 10"
+#bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "resize-pane -D 5"
+#bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "resize-pane -U 5"
+#bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "resize-pane -R 10"
