Add true colors tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # Add color to tmux terminal
 set -g default-terminal "screen-256color"
-
+set -ga terminal-overrides ",xterm-256color:Tc"
 #-----------------------------
 # List of Plugins
 # https://github.com/tmux-plugins/tpm
@@ -27,6 +27,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 # Tmux pane creating remapping
 bind | split-window -h -c "#{pane_current_path}"
 bind _ split-window -v -c "#{pane_current_path}"
+
+
 
 # This tmux statusbar config was created by tmuxline.vim
 # on Sat, 16 May 2020
